開発環境構築

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,7 +1,6 @@
 FROM alpine:3.9
 
-RUN apk update && \
-    apk add --no-cache nginx && \
+RUN apk --update add --no-cache nginx && \
     ln -sf /usr/share/xoneinfo/Asia/Tokyo /etc/localtime
 
 RUN mkdir -p /run/nginx
