--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,34 +3,43 @@ version: '3'
 services:
   nginx:
     build: ./docker/nginx
+    container_name: nginx
     volumes:
-      - ./server:/var/www
+      - ./server:/var/www:cached
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - '80:80'
+    depends_on:
+      - php
 
   php:
     build: ./docker/php
+    container_name: php
+    environment:
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_NAME: laravel_photo_dev
+      DB_USER: root
+      DB_PASS: password
     volumes:
       - ./server:/var/www
 
   mysql:
     image: mysql:5.7
+    container_name: mysql
     environment:
-      MYSQL_DATABASE: photo_share_db
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_USER: mysql
-      MYSQL_PASSWORD: password
       TZ: 'Asia/Tokyo'
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
-      - ./docker/db/data:/var/lib/mysql
-      - ./docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
-      - ./docker/db/sql:/docker-entrypoint-initdb.d
+      - ./docker/mysql/data:/var/lib/mysql
+      - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./docker/mysql/sql:/docker-entrypoint-initdb.d
     ports:
       - '3306:3306'
 
   redis:
     build: ./docker/redis
+    container_name: redis
     ports:
       - '6379:6379'
