--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,6 +3,9 @@ server {
   index index.php index.html;
   root /var/www/public;
 
+  access_log /var/log/nginx/access.log;
+  error_log  /var/log/nginx/error.log;
+
   location / {
     root /var/www/public;
     index index.html index.php;
