--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,9 @@ services:
     container_name: nginx
     volumes:
       - ./server:/var/www:cached
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - '80:80'
-    depends_on:
-      - php
 
   php:
     build: ./docker/php
@@ -32,8 +30,9 @@ services:
       TZ: 'Asia/Tokyo'
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
-      - ./docker/mysql/data:/var/lib/mysql
-      - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./docker/mysql/data:/var/lib/mysql:delegated
+      - ./docker/mysql/log:/var/log/mysql:delegated
+      - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf:ro
       - ./docker/mysql/sql:/docker-entrypoint-initdb.d
     ports:
       - '3306:3306'
