--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,18 +1,15 @@
 FROM php:7.3-fpm-alpine3.8
 
-WORKDIR /var/www/laravel
+WORKDIR /var/www
 
 COPY php.ini /usr/local/etc/php/
 
 RUN apk update && apk upgrade && apk add --no-cache \
-  freetype-dev libjpeg-turbo-dev libpng-dev libmcrypt-dev \
-  git vim unzip tzdata \
-  libmcrypt-dev \
-  libltdl \
+  libpng-dev\
   nodejs \
+  tzdata \
   && docker-php-ext-install pdo_mysql mysqli gd \
   && cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime \
-  && apk del tzdata \
-  && rm -rf /var/cache/apk/*
+  && apk del libpng-dev tzdata \
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
