--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,10 @@ services:
       DB_HOST: mysql
       DB_PORT: 3306
       DB_NAME: laravel_photo_dev
-      DB_USER: root
+      DB_USER: user
       DB_PASS: password
     volumes:
-      - ./server:/var/www
+      - ./server:/var/www/photo_app
 
   mysql:
     image: mysql:5.7
@@ -30,8 +30,8 @@ services:
       TZ: 'Asia/Tokyo'
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
-      - ./docker/mysql/data:/var/lib/mysql:delegated
-      - ./docker/mysql/log:/var/log/mysql:delegated
+      - ./docker/mysql/docker_volumes/data:/var/lib/mysql:delegated
+      - ./docker/mysql/docker_volumes/log:/var/log/mysql:delegated
       - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf:ro
       - ./docker/mysql/sql:/docker-entrypoint-initdb.d
     ports:
