--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,6 +1,6 @@
-FROM php:7.3-fpm-alpine3.8
+FROM php:7.3.7-fpm-alpine3.9
 
-WORKDIR /var/www
+WORKDIR /var/www/photo_app
 
 COPY php.ini /usr/local/etc/php/
 
@@ -11,5 +11,4 @@ RUN apk update && apk upgrade && apk add --no-cache \
   && docker-php-ext-install pdo_mysql mysqli gd \
   && cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime \
   && apk del libpng-dev tzdata \
-
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+  && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
