レビュー修正

--- a/docker/redis/Dockerfile
+++ b/docker/redis/Dockerfile
@@ -1,8 +1,7 @@
 FROM redis:5.0.4-alpine
 ARG time_zone="Asia/Tokyo"
-RUN apk add tzdata \
+RUN apk add --no-cache tzdata \
   && cp "/usr/share/zoneinfo/${time_zone}" /etc/localtime \
-  && apk del tzdata \
-  && rm -rf /var/cache/apk/* \
+  && apk del tzdata
 EXPOSE 6379
 CMD ["redis-server"]
