レビュー修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: ./docker/nginx
     container_name: nginx
     volumes:
-      - ./server:/var/www:cached
+      - ./server:/var/www/photo_app:cached
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - '80:80'
