--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,7 +2,7 @@ server {
   listen 80;
 
   # $document_root の値になる
-  root /var/www/public;
+  root /var/www/photo_app/public;
 
   location / {
     # インデックスページを指定(リクエストが/で終わっている場合に見にいくページ)
