--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,9 @@ services:
       DB_PASS: password
     volumes:
       - ./server:/var/www/photo_app
+    ports:
+      - "3000:3000"
+      - "3001:3001"
 
   mysql:
     image: mysql:5.7
