--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
         "vue": "^2.5.17",
         "vue-router": "^3.0.7",
         "vue-template-compiler": "^2.5.21",
+        "vuex": "^3.1.1",
         "webpack": "^4.35.3"
     }
 }
