chapter8(エラーハンドリング)

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -8,7 +8,7 @@ RUN apk update && apk upgrade && apk add --no-cache \
   libpng-dev\
   nodejs-npm \
   tzdata \
-  && docker-php-ext-install pdo_mysql mysqli gd \
+  && docker-php-ext-install pdo_mysql mysqli \
   && cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime \
   && apk del libpng-dev tzdata \
   && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
